Bug 473035 - Widget explorer categories don’t work (are almost empty) for non-English locales
Summary: Widget explorer categories don’t work (are almost empty) for non-English locales
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.27.7
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-08-05 11:42 UTC by Karl Ove Hufthammer
Modified: 2023-08-30 11:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2023-08-05 11:42:09 UTC
SUMMARY
The list of categories in the widget explorer is (almost) empty if the language settings are set to something different than English. For example, if you set the language to Norwegian Nynorsk, the only category visible is ‘Multimedia’ (probably because the name is the same in Norwegian and English).


STEPS TO REPRODUCE
1. Go the system settings, regional settings and change the language to Norwegian Nynorsk (= norsk nynorsk).
2. Log out and in again (for the language change to fully take effect).
3. Right-click on the desktop and choose ‘Legg til element …’ (= ‘Add Widget…’).
4. In the ‘Add Widget’ thing which appear, click ‘Alle element’.

OBSERVED RESULT
The list of categories only include ‘Multimedia’.


EXPECTED RESULT
The list of categories should contain many categories, just like it does if you run Plasma with English as the language.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230804
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Comment 1 Nate Graham 2023-08-07 21:48:58 UTC
And these strings are fully translated into Norwegian?
Comment 2 Karl Ove Hufthammer 2023-08-08 17:05:49 UTC
(In reply to Nate Graham from comment #1)
> And these strings are fully translated into Norwegian?

Yes, they are:
https://websvn.kde.org/branches/stable/l10n-kf5/nn/messages/plasma-workspace/plasmashellprivateplugin.po?view=markup
Comment 3 Bug Janitor Service 2023-08-24 11:03:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3216
Comment 4 David Redondo 2023-08-30 07:17:16 UTC
Git commit 304247f360a19b85a4ebfb62c2df40fd3cdfad68 by David Redondo.
Committed on 30/08/2023 at 09:04.
Pushed by davidre into branch 'master'.

widgetexplorer: Fix category filtering

Fitering happens on untranslated value, see PlasmaAppletItem::passesFiltering.
FIXED-IN:5.27.8

M  +3    -2    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/304247f360a19b85a4ebfb62c2df40fd3cdfad68
Comment 5 David Redondo 2023-08-30 11:58:06 UTC
Git commit 02914fabb1e5019ae8ee7d1bdcf7c78e05bba1c6 by David Redondo.
Committed on 30/08/2023 at 09:17.
Pushed by davidre into branch 'Plasma/5.27'.

widgetexplorer: Fix category filtering

Fitering happens on untranslated value, see PlasmaAppletItem::passesFiltering.
FIXED-IN:5.27.8


(cherry picked from commit 304247f360a19b85a4ebfb62c2df40fd3cdfad68)

M  +3    -2    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/02914fabb1e5019ae8ee7d1bdcf7c78e05bba1c6