widgetexplorer: Fix category filtering

Fitering happens on untranslated value, see PlasmaAppletItem::passesFiltering.
BUG:473035
FIXED-IN:5.27.8


(cherry picked from commit 304247f360a19b85a4ebfb62c2df40fd3cdfad68)